--- a/vignettes/detailed_config.Rmd
+++ b/vignettes/detailed_config.Rmd
@@ -53,10 +53,10 @@ summaryData <- rtData$Cases$summary
 rtData <- lapply(rtData, function(.){.[-1]})
 ```
 
-We can also configure a list of URLs to link more detailed estimates (using the `RtD3::getSubnationalUrls` helper function).
+We can also configure a list of URLs to link more detailed estimates (using the `RtD3::getSubregionalUrls` helper function).
 
 ``` {r}
-subnational_ref <- RtD3::getSubnationalUrls(path = "https://epiforecasts.io/covid/posts/national/",
+subnational_ref <- RtD3::getSubregionalUrls(path = "https://epiforecasts.io/covid/posts/national/",
                                             areas = c('Afghanistan', 'Brazil', 'Colombia', 'India', 
                                                       'Italy', 'Germany', 'Russia', 'United Kingdom',
                                                       'United States'))
@@ -69,6 +69,6 @@ RtD3::summaryWidget(
   geoData = geoData,
   summaryData = summaryData,
   rtData = rtData,
-  subregional_ref = subregional_ref
+  subregional_ref = subnational_ref
 )
 ```
