--- a/vignettes/subnational.Rmd
+++ b/vignettes/subnational.Rmd
@@ -22,38 +22,21 @@ RtD3 supports visualizations for subnational estimates using the same interface.
 Plotting subnational estimates requires that column names are identical to the columns required from global estimates. 
 
 ```{r }
-
-base_url <- 'https://raw.githubusercontent.com/epiforecasts/covid-rt-estimates/master/subnational/india/'
-
 geoData <- rnaturalearth::ne_states('India', returnclass = 'sf') %>% 
   rename(sovereignt = name_en)
 
-summaryData <- readr::read_csv(paste0(base_url, 'cases/summary/summary_table.csv'), col_types = cols()) %>% 
-  rename(Country = Region)
+# Read in each summary folder
+rtData <- list("Cases" = 
+RtD3::readInEpiNow2(path = "https://raw.githubusercontent.com/epiforecasts/covid-rt-estimates/master/subnational/india/cases/summary",
+                    region_var = "region"))
 
-rtData <- readr::read_csv(paste0(base_url, 'cases/summary/rt.csv'), col_types = cols()) %>% 
-  rename(country = region)
+# Extract summary data from cases
+summaryData <- rtData$Cases$summary
 
-casesInfectionData <- readr::read_csv(paste0(base_url, 'cases/summary/cases_by_infection.csv'), col_types = cols()) %>% 
-  rename(country = region)
-
-casesReportData <- readr::read_csv(paste0(base_url, 'cases/summary/cases_by_report.csv'), col_types = cols()) %>% 
-  rename(country = region)
-
-obsCasesData <- readr::read_csv(paste0(base_url, 'cases/summary/reported_cases.csv'), col_types = cols())
-
+## Drop remaining summary data
+rtData <- lapply(rtData, function(.){.[-1]})
 ```
 
-The same as in the introductory example, rt data is passed in a JSON-like object.
-
-```{r}
-
-rtData = list('Cases' = list('rtData' = rtData, 
-                             'casesInfectionData' = casesInfectionData, 
-                             'casesReportData' = casesReportData, 
-                             'obsCasesData' = obsCasesData))
-
-```
 
 This data is then passed to `RtD3::summaryWidget`.
 
