--- a/vignettes/detailed_config.Rmd
+++ b/vignettes/detailed_config.Rmd
@@ -9,8 +9,9 @@ vignette: >
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-require(tidyverse)
-require(RtD3)
+library(dplyr)
+library(rnaturalearth)
+library(RtD3)
 ```
 
 ## Overview
